@@ -72,6 +72,7 @@ tools/here-i-am
 tools/kat
 tools/mailgroup
 tools/mimepart
+tools/natsort
 tools/nph-download.cgi
 tools/pad
 tools/popin
