@@ -178,6 +178,7 @@ SNERT_SYS
 SNERT_PAM
 SNERT_SETJMP
 SNERT_RANDOM
+SNERT_EXTRA_STDIO
 SNERT_ANSI_STRING
 SNERT_EXTRA_STRING
 SNERT_REGEX
